local commit of all files

--- a/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
@@ -4,14 +4,7 @@
 
 	<div data-role="header" id="header" data-position="fixed">
 
-		<div class="right">
-			<a class="menu-display" href="#right-panel"> <img alt="mmenu"
-				src="../images/header/drawer_menu_header_button.png" />
-			</a> <a class="top-notifications"> <img alt="top-notifications"
-				src="../images/header/top_notification_button.png" />
-			</a>
-		</div>
-		<div class="left"></div>
+		
 		<div class="center with-logo"></div>
 		<!--<div class="center">
 			<p class="current-title">FAQ's</p>
@@ -35,17 +28,17 @@
 						<tr class="spacer"></tr>
 						<tr class="home-investment">
 							<td class="home">
-								<p class="top-title">Centre d'Investissement</p>
+								
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Plan de Retraite</p>
+								<p class="bottom-title">Mes Proprietes</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
 						<tr class="home-autoloan">
 							<td class="home">
-								<p class="top-title">Centre de Crédit Auto</p>
+							
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Roll In Style</p>
+								<p class="bottom-title">Refinancement</p>
 							</td>
 						</tr>
 					</tbody>
