--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -3,20 +3,22 @@
 	<link rel="stylesheet" href="../css/pages/select-mortgage-type-view.css">
 
 	<div data-role="header" id="header" data-position="fixed">
-
-		<div class="right">
-			<a class="menu-display" href="#right-panel"> <img alt="mmenu"
-				src="../images/header/drawer_menu_header_button.png" />
-			</a> <a class="top-notifications"> <img alt="top-notifications"
-				src="../images/header/top_notification_button.png" />
+		
+		
+		
+		<div class="left">
+			<a href="#" data-rel="back">
+				<img alt="back" src="../images/header/back_arrow.png" />
+				<span class="back">Acceill</span>
 			</a>
 		</div>
-		<div class="left"></div>
-		<div class="center with-logo"></div>
-		<!--<div class="center">
-			<p class="current-title">FAQ's</p>
-		</div>-->
 
+		
+		<!--<div class="center with-logo"></div>-->
+		<div class="center">
+			<p class="current-title">Comment ce credit sera utilser ?</p>
+		</div>
+		
 	</div>
 
 		<div data-role="content" id="pageContent">
@@ -26,7 +28,7 @@
 				<table class="homes">
 					<tbody>
 						<tr class="home-insurance" >
-							<td class="home" id="newmortgages">
+							<td class="home" id="options">
 								
 								<div class="bottom-title-effect"></div>
 								<p class="bottom-title">Nouveau Credit</p>
@@ -35,7 +37,6 @@
 						<tr class="spacer"></tr>
 						<tr class="home-investment">
 							<td class="home">
-								<p class="top-title">Centre d'Investissement</p>
 								<div class="bottom-title-effect"></div>
 								<p class="bottom-title">Plan de Retraite</p>
 							</td>
@@ -43,7 +44,6 @@
 						<tr class="spacer"></tr>
 						<tr class="home-autoloan">
 							<td class="home">
-								<p class="top-title">Centre de Crédit Auto</p>
 								<div class="bottom-title-effect"></div>
 								<p class="bottom-title">Roll In Style</p>
 							</td>
