updating select mortgage type

--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -61,11 +61,24 @@
 		</div>
 	</div>
 
-		
+	<div data-role="popup" id="mortgae-amount"  data-dismissible="false" data-overlay-theme="a">
+        <form>
+              <h4 class="popup-title">Entrer le montant </h4>
+              <div class="mortgage-amount-wrapper">
+              <label for="amount">Estimer le mantant du credit</label>
+              <input type="number"  id="amount" value="" placeholder="montant"  />
+
+              
+
+              <button id="amountSubmit">Définir</button>
+              </div>
+        </form>
+    </div>		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
 			<div class="center little"> Attijari Wafa Banque</div>
 		</div>
+
 
 	
 
