generale css update

--- a/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
@@ -22,7 +22,7 @@
 							<td class="home" id="newmortgages">
 								
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Nouveau Credit</p>
+								<p class="bottom-title">Nouveau crédit</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -30,7 +30,7 @@
 							<td class="home">
 								
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Mes Proprietes</p>
+								<p class="bottom-title">Mes propriétés</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -57,7 +57,7 @@
 		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> &#169; Attijari Wafa Banque</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
 		</div>
 
 	
