--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -9,14 +9,14 @@
 		<div class="left">
 			<a href="#" data-rel="back">
 				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Types de credit</span>
+				<span class="back">Types de crédit</span>
 			</a>
 		</div>
 
 		
 		
 		<div class="center">
-			<p class="current-title">Options de credit</p>
+			<p class="current-title">Options de crédit</p>
 		</div>
 		
 	</div>
@@ -26,7 +26,7 @@
 			<div class="options-content">
 			<div class="options-top">
 			
-			<p class="content-header">Attijari wafa banque a toutes les options de credit cites ci desous : </p>
+			<p class="content-header">Attijari wafa banque a toutes les options de crédit cités ci desous : </p>
 			
 			<div id="table-wrapper" >
 		   
@@ -35,7 +35,7 @@
 						<tr class="row" id="0" >
 							<td class="button-wrapper">
 								<img src="../images/content/info.png" class="info-thumb"></img>
-								<span >30 Years Variable 4.5% APR</span>
+								<span >15 Ans à 7% Taux Fixe</span>
 							</td>
 							<td class="info-thumb">
 								<img src="../images/content/info.png" class="info-thumb"></img>
@@ -45,7 +45,7 @@
 						<tr class="row" id="1" >
 							<td class="button-wrapper">
 								<img src="../images/content/info.png" class="info-thumb"></img>
-								<span >30 Years Variable 4.5% APR</span>
+								<span >20 Ans à 5.5% Taux Variable</span>
 							</td>
 							<td class="info-thumb">
 								<img src="../images/content/info.png" class="info-thumb"></img>
@@ -55,7 +55,7 @@
 						<tr class="row"  id="2">
 							<td class="button-wrapper">
 								<img src="../images/content/info.png" class="info-thumb"></img>
-								<span >30 Years Variable 4.5% APR</span>
+								<span >20 Ans à 6.2% Taux Fixe</span>
 							</td>
 							<td class="info-thumb">
 								<img src="../images/content/info.png" class="info-thumb"></img>
@@ -65,7 +65,7 @@
 						<tr class="row"  id="3">
 							<td class="button-wrapper">
 								<img src="../images/content/info.png" class="info-thumb"></img>
-								<span >30 Years Variable 4.5% APR</span>
+								<span >30 Ans à 4.5% Taux Variable</span>
 							</td>
 							<td class="info-thumb">
 								<img src="../images/content/info.png" class="info-thumb"></img>
@@ -93,7 +93,7 @@
 	
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> Attijari Wafa Banque</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
 		</div>
 
 	
