--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -9,7 +9,7 @@
 		<div class="left">
 			<a href="#" data-rel="back">
 				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Offres de credit</span>
+				<span class="back">Offres de crédit</span>
 			</a>
 		</div>
 
@@ -27,7 +27,7 @@
 					<tbody>
 						<tr>
 							<td class="home">
-								<p class="content-header">Attijari wafa banque a toutes les options de credit cites ci desous : </p>	
+								<p class="content-header">Attijari wafa banque a toutes les options de crédit cités ci desous : </p>	
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -59,7 +59,7 @@
 		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> &#169; Attijari Wafa Banque</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
 		</div>
 
 	
