--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -16,7 +16,7 @@
 		
 		<!--<div class="center with-logo"></div>-->
 		<div class="center">
-			<p class="current-title">Comment ce credit sera utilser ?</p>
+			<p class="current-title">Comment ce crédit sera utilser ?</p>
 		</div>
 		
 	</div>
@@ -31,14 +31,14 @@
 							<td class="home" id="options">
 								
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Nouveau Credit</p>
+								<p class="bottom-title">Nouveau crédit</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
 						<tr class="home-investment">
 							<td class="home">
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Plan de Retraite</p>
+								<p class="bottom-title">Plan de retraite</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -61,11 +61,11 @@
 		</div>
 	</div>
 
-	<div data-role="popup" id="mortgae-amount"  data-dismissible="false" data-overlay-theme="a">
+	<div data-role="popup" id="mortgae-amount"  data-dismissible="false" data-overlay-theme="b">
         <form>
               <h4 class="popup-title">Entrer le montant </h4>
               <div class="mortgage-amount-wrapper">
-              <label for="amount">Estimer le mantant du credit</label>
+              <label for="amount">Estimer le mantant du crédit</label>
               <input type="number"  id="amount" value="" placeholder="montant"  />
 
               
@@ -76,7 +76,7 @@
     </div>		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> Attijari Wafa Banque</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
 		</div>
 
 
