--- a/Kiosk-poc/apps/Kiosk/common/index.html
+++ b/Kiosk-poc/apps/Kiosk/common/index.html
@@ -18,7 +18,7 @@
    		<script type="text/javascript" src="js/jquery-2.1.1.js"></script>
    		<script type="text/javascript" src="jqueryMobile/jquery.mobile-1.4.4.js"></script>
    		
-<!-- <script type="text/javascript" src="sharedResources/customersObject.js"></script> -->
+       <script type="text/javascript" src="sharedResources/mortgagesObject.js"></script>
    		
    		<script type="text/javascript" src="js/initOptions.js"></script>
    		<script type="text/javascript" src="js/main.js"></script>
