css generale update

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -26,7 +26,7 @@
 			<div class="options-content">
 			<div class="options-top">
 			
-			<p class="content-header">Attijari wafa banque a toutes les options de crédit cités ci desous : </p>
+			<p class="content-header"> Choisissez parmi ces options de crédit cités ci desous : </p>
 			
 			<div id="table-wrapper" >
 		   
@@ -34,7 +34,7 @@
 				 <tbody>
 						<tr class="row" id="0" >
 							<td class="button-wrapper">
-								<img src="../images/content/info.png" class="info-thumb"></img>
+								<img src="../images/content/touch-hand.png" class="info-thumb"></img>
 								<span >15 Ans à 7% Taux Fixe</span>
 							</td>
 							<td class="info-thumb">
@@ -44,7 +44,7 @@
 						<tr class="table-spacer"></tr>
 						<tr class="row" id="1" >
 							<td class="button-wrapper">
-								<img src="../images/content/info.png" class="info-thumb"></img>
+								<img src="../images/content/touch-hand.png" class="info-thumb"></img>
 								<span >20 Ans à 5.5% Taux Variable</span>
 							</td>
 							<td class="info-thumb">
@@ -54,7 +54,7 @@
 						<tr class="table-spacer"></tr>
 						<tr class="row"  id="2">
 							<td class="button-wrapper">
-								<img src="../images/content/info.png" class="info-thumb"></img>
+								<img src="../images/content/touch-hand.png" class="info-thumb"></img>
 								<span >20 Ans à 6.2% Taux Fixe</span>
 							</td>
 							<td class="info-thumb">
@@ -64,7 +64,7 @@
 						<tr class="table-spacer"></tr>
 						<tr class="row"  id="3">
 							<td class="button-wrapper">
-								<img src="../images/content/info.png" class="info-thumb"></img>
+								<img src="../images/content/touch-hand.png" class="info-thumb"></img>
 								<span >30 Ans à 4.5% Taux Variable</span>
 							</td>
 							<td class="info-thumb">
