--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -24,7 +24,7 @@
 	<div id="mortgageSimulator" >
 			<div class="options-content">
 			<div class="options-top">
-				<p class="content-header">Attijari wafa banque a toutes les options de credit cites ci desous : </p>
+				<p class="content-header">Voulez vous discuter cet offre avec un représentant? </p>
 	
 	
 	<ul data-role="listview" data-inset="true"
@@ -160,8 +160,8 @@
               <h4 class="popup-title">Appeler un expert</h4>
               <div class="popup-wrapper">
               <p> 
-              		Un Expert est contacter pour vous assister dans les plus brefs delais
-              		Merci.
+              		Un expert a été contacté pour vous assister dans les plus brefs delais possible.<br>
+              		
               
               </p>
 
