--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -26,22 +26,28 @@
 				<table class="homes">
 					<tbody>
 						<tr>
-							<td class="home">
-								<p class="content-header">Attijari wafa banque a toutes les options de crédit cités ci desous : </p>	
+							<td class="next-td-text">
+								<p class="content-header">
+								    <span>Merci.</span>
+								    Savez vous que Attijariwafa n'est pas seulement une banque.
+								    Demader plus d'informations sur nos autres services.
+								  </p>	
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
 						<tr class="home-investment">
 							<td class="home">
+							    <p class="top-title">Centre d'Assurance</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Plan de Retraite</p>
+								<p class="bottom-title">Protéger votre famille et vos propriétés</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
 						<tr class="home-autoloan">
 							<td class="home">
+							    <p class="top-title">Centre d'Investissement</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Roll In Style</p>
+								<p class="bottom-title">Plan de ratraite</p>
 							</td>
 						</tr>
 					</tbody>
