--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -9,14 +9,14 @@
 		<div class="left">
 			<a href="#" data-rel="back">
 				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Acceill</span>
+				<span class="back">Acceil</span>
 			</a>
 		</div>
 
 		
 		<!--<div class="center with-logo"></div>-->
 		<div class="center">
-			<p class="current-title">Comment ce crédit sera utilser ?</p>
+			<p class="current-title">Comment vous voulez utiliser ce crédit ?</p>
 		</div>
 		
 	</div>
