-adding form validation -fixing back button bug -generale bug fixes

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page">
+<div data-role="page" id="page" >
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/pages/mortgage-options-view.css">
 
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a href="#" data-rel="back">
+			<a href="../pages/select-mortgage-type-view.html" data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Types de crédit</span>
 			</a>
