--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page">
+<div data-role="page" id="page" >
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/pages/next-best-offer-view.css">
 
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a href="#" data-rel="back">
+			<a href="../pages/home-view.html" data-transition="pop">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Offres de crédit</span>
 			</a>
@@ -39,7 +39,7 @@
 							<td class="home">
 							    <p class="top-title">Centre d'Assurance</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Protéger votre famille et vos propriétés</p>
+								<p class="bottom-title-right">Protéger votre famille et vos propriétés</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -47,7 +47,7 @@
 							<td class="home">
 							    <p class="top-title">Centre d'Investissement</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Plan de ratraite</p>
+								<p class="bottom-title-right">Plan de ratraite</p>
 							</td>
 						</tr>
 					</tbody>
@@ -55,7 +55,7 @@
 				
 
              <div class="ui-grid-solo ui-responsive">
-                 <div  class="ui-block-a"><a id="homeButton" href="#" class="ui-btn ui-shadow">Home</a></div>
+                 <div  class="ui-block-a"><a id="homeButton" href="../pages/home-view.html" data-transition="pop" class="ui-btn ui-shadow">Home</a></div>
              </div>
 				
 			</div>
