--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -94,7 +94,7 @@
 					<p>
 						<span class="attribute-label">Taux d'assurance</span> 
 						<span class="attribute-value">
-							<input class="rightText"  data-wrapper-class="ui-custom"type = "text"  onkeyup=checkAndValidate(this) />
+							<input value="0.5"class="rightText"  data-wrapper-class="ui-custom"type = "text"  onkeyup=checkAndValidate(this) readonly="readonly"/>
 						</span>
 					</p>
 				</div>
@@ -111,7 +111,7 @@
 					<p>
 						<span class="attribute-label">Taux d'Impôt Foncier </span> 
 						<span class="attribute-value">
-							<input class="rightText" data-wrapper-class="ui-custom"type = "text" onkeyup=checkAndValidate(this) />
+							<input value="4" class="rightText" data-wrapper-class="ui-custom"type = "text" onkeyup=checkAndValidate(this) readonly="readonly" />
 						</span>
 					</p>
 				</div>
