update in form validation

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -173,7 +173,7 @@
 			        
 			        <div data-type="horizontal">
 			        <label for="tel">Telephone</label>
-			        <input id="tel" type="text" placeholder="Tel">
+			        <input id="tel"  placeholder="Tel" type="tel" />
 			        </div>
 			        
 			         <div  data-type="horizontal">
