--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -66,7 +66,7 @@
               <h4 class="popup-title">Entrer le montant </h4>
               <div class="mortgage-amount-wrapper">
               <label for="amount">Estimer le mantant du crédit</label>
-              <input  onkeydown=checnum(this) type="number"  id="amount" value="" placeholder="montant"  />
+              <input type="number"  min="100" max="50000000" id="amount" value="" placeholder="montant"  />
 
               
 
