--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a href="../pages/mortgage-options-view.html" data-transition="none" data-direction="reverse">
+			<a id="header-back" href="../pages/mortgage-options-view.html" >
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Options de crédit</span>
 			</a>
@@ -147,7 +147,7 @@
 	</div>			
              <div id="bottom-menu">
                  <div  class="block-a"><a id="back" href="#" class="ui-btn ui-shadow">Regarder une autre Offre</a></div>
-                 <div  class="block-b"><a id="submitButton" href="#" class="ui-btn ui-shadow">Appeler à un expert</a></div>
+                 <div  class="block-b"><a id="submitButton" href="#" class="ui-btn ui-shadow">Contacter à un expert</a></div>
              </div>
 				
 			</div>
