--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -4,10 +4,10 @@
 
 	<div data-role="header" id="header" data-position="fixed">
 		
-		
+<!-- 		data-transition="slide" data-direction="reverse" -->
 		
 		<div class="left">
-			<a href="../pages/select-mortgage-type-view.html" data-transition="slide" data-direction="reverse">
+			<a href="../pages/select-mortgage-type-view.html" >
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Types de crédit</span>
 			</a>
