--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a href="../pages/home-view.html" data-transition="pop">
+			<a href="../pages/home-view.html" data-transition="none">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Offres de crédit</span>
 			</a>
@@ -55,7 +55,7 @@
 				
 
              <div class="ui-grid-solo ui-responsive">
-                 <div  class="ui-block-a"><a id="homeButton" href="../pages/home-view.html" data-transition="pop" class="ui-btn ui-shadow">Home</a></div>
+                 <div  class="ui-block-a"><a id="homeButton" href="../pages/home-view.html" data-transition="none" class="ui-btn ui-shadow">Home</a></div>
              </div>
 				
 			</div>
