deployable version with transitions support

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -7,7 +7,7 @@
 <!-- 		data-transition="slide" data-direction="reverse" -->
 		
 		<div class="left">
-			<a href="../pages/select-mortgage-type-view.html" >
+			<a href="../pages/select-mortgage-type-view.html"  data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Types de crédit</span>
 			</a>
