--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a id="header-back" href="../pages/mortgage-options-view.html" >
+			<a id="header-back" href="../pages/mortgage-options-view.html" data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Options de crédit</span>
 			</a>
