--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page">
+<div data-role="page" id="page" class="stopFlicker">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/pages/mortgage-options-view.css">
 
@@ -18,7 +18,7 @@
 		<div class="center">
 			<p class="current-title">Options de crédit</p>
 		</div>
-		
+		 
 	</div>
 
 		<div data-role="content" id="pageContent">
