--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -45,7 +45,7 @@
 						<tr class="spacer"></tr>
 						<tr class="home-autoloan">
 							<td class="home">
-							    <p class="top-title">Centre d'Investissement</p>
+							    <p class="top-title" style="color:#818181;">Centre d'Investissement</p>
 								<div class="bottom-title-effect"></div>
 								<p class="bottom-title-right">Plan de ratraite</p>
 							</td>
