adding transitions to popups

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -155,7 +155,7 @@
 	</div>
 	
 	
-		<div data-role="popup" id="ask-expert"  data-dismissible="false" data-overlay-theme="b">
+		<div data-role="popup" id="ask-expert"  data-transition="slidedown"  data-dismissible="false" data-overlay-theme="b">
         <div class="popup-content">
               <h4 class="popup-title">Appeler un expert</h4>
               <div class="popup-content-wrapper">
@@ -191,7 +191,7 @@
         </div>
     </div>	
     
-    	<div data-role="popup" id="confirmation"  data-dismissible="false" data-overlay-theme="b">
+    	<div data-role="popup" id="confirmation" data-transition="slidedown"   data-dismissible="false" data-overlay-theme="b">
         <div class="popup-content">
               <h4 class="popup-title">Merci pour votre interet.</h4>
               <div class="popup-content-wrapper">
