--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 
-	<div data-role="popup" id="mortgae-amount"  data-dismissible="false" data-overlay-theme="b" >
+	<div data-role="popup" id="mortgae-amount" data-transition="slidedown" data-dismissible="false" data-overlay-theme="b" >
         <form>
               <h4 class="popup-title">Entrer le montant </h4>
               <div class="popup-content-wrapper">
