general css update and bug fixing

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -126,17 +126,17 @@
     <table style="width: 100%;">
 	<tr>
 	<td> <p><strong>Mensualités</strong></p>
-	<input class="centerText" data-wrapper-class="ui-custom"type = "text"  /></td>
+	<input class="centerText bigText" data-wrapper-class="ui-custom"type = "text"  /></td>
 	
 	<td> <p><strong>Intérêts payés</strong></p>
-	<input class="centerText" data-wrapper-class="ui-custom" type = "text"  /></td>
+	<input class="centerText bigText" data-wrapper-class="ui-custom" type = "text"  /></td>
 	</tr>
 	<tr>
 	<td> <p><strong>Impôts payés </strong></p>
-	<input class="centerText" data-wrapper-class="ui-custom" type = "text"  />
+	<input class="centerText bigText" data-wrapper-class="ui-custom" type = "text"  />
 	</td>
 	<td> <p><strong>Assurance payés </strong></p>
-	<input class="centerText" data-wrapper-class="ui-custom" type = "text"  />
+	<input class="centerText bigText" data-wrapper-class="ui-custom" type = "text"  />
 	 </td>
 	</tr>
 	</table>
