--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -6,12 +6,12 @@
 		
 		
 		
-		<div class="left">
-			<a href="../pages/home-view.html" data-transition="pop">
-				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Offres de crédit</span>
-			</a>
-		</div>
+<!-- 		<div class="left"> -->
+<!-- 			<a href="../pages/home-view.html" data-transition="pop"> -->
+<!-- 				<img alt="back" src="../images/header/back_arrow.png" /> -->
+<!-- 				<span class="back">Offres de crédit</span> -->
+<!-- 			</a> -->
+<!-- 		</div> -->
 
 		
 		
