--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page">
+<div data-role="page" id="page" class="no-flick">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/pages/mortgage-simulator-view.css">
     <link rel="stylesheet" href="../css/form-validator.css">
