general css update - stabilizing interface after page transition

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -24,7 +24,7 @@
 	</div>
 
 		<div data-role="content" id="pageContent">
-		
+		<div id="options-wrapper">
 			<div class="options-content">
 			<div class="options-top">
 			
@@ -90,7 +90,7 @@
              </div>
 				
 			</div>
-		
+		</div>
 	</div>
 
 	
