update in the transition type

--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -7,7 +7,7 @@
 		
 		
 		<div class="left">
-			<a href="../pages/home-view.html">
+			<a href="../pages/home-view.html" data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
 				<span class="back">Acceil</span>
 			</a>
