generale text update

--- a/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/home-view.html
@@ -55,7 +55,7 @@
 		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légales</div>
 		</div>
 
 	
