--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -146,8 +146,8 @@
 				
 	</div>			
              <div id="bottom-menu">
-                 <div  class="block-a"><a id="back" href="#" class="ui-btn ui-shadow">Regarder une autre Offre</a></div>
-                 <div  class="block-b"><a id="submitButton" href="#" class="ui-btn ui-shadow">Contacter à un expert</a></div>
+                 <div  class="block-a"><a id="back" href="#" class="ui-btn ui-shadow">Consulter une autre Offre</a></div>
+                 <div  class="block-b"><a id="submitButton" href="#" class="ui-btn ui-shadow">Contacter un expert</a></div>
              </div>
 				
 			</div>
@@ -157,7 +157,7 @@
 	
 		<div data-role="popup" id="ask-expert"  data-transition="slidedown"  data-dismissible="false" data-overlay-theme="b">
         <div class="popup-content">
-              <h4 class="popup-title">Appeler un expert</h4>
+              <h4 class="popup-title">Contacter un expert</h4>
               <div class="popup-content-wrapper">
               <p> 
               		Tous nos experts sont occupés en ce moment.<br>
@@ -209,7 +209,7 @@
 		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légales</div>
 		</div>
 
 	
