--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -76,7 +76,7 @@
     </div>		
 
 		<div data-role="footer"  class="footer" data-position="fixed">
-			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légale</div>
+			<div class="center little"> &#169;2014 AttijariWafa Bank | Mentions légales</div>
 		</div>
 
 
