--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -30,7 +30,7 @@
 								<p class="content-header">
 								    <span>Merci.</span>
 								    Savez vous que Attijariwafa n'est pas seulement une banque.
-								    Demader plus d'informations sur nos autres services.
+								    Demander plus d'informations sur nos autres services.
 								  </p>	
 							</td>
 						</tr>
