generale text update

--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-options-view.html
@@ -28,7 +28,7 @@
 			<div class="options-content">
 			<div class="options-top">
 			
-			<p class="content-header"> Choisissez parmi ces options de crédit cités ci desous : </p>
+			<p class="content-header"> Choisissez parmi ces options de crédit citées ci-dessous : </p>
 			
 			<div id="table-wrapper" >
 		   
