--- a/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/mortgage-simulator-view.html
@@ -9,7 +9,7 @@
 		<div class="left">
 			<a id="header-back" href="../pages/mortgage-options-view.html" data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Options de crédit</span>
+				<span class="back">Options du crédit</span>
 			</a>
 		</div>
 
@@ -24,7 +24,7 @@
 	<div id="mortgageSimulator" >
 			<div class="options-content">
 			<div class="options-top">
-				<p class="content-header">Voulez vous discuter cet offre avec un représentant? </p>
+				<p class="content-header">Voulez-vous discuter cet offre avec un représentant? </p>
 	
 	
 	<ul data-role="listview" data-inset="true"
@@ -135,7 +135,7 @@
 	<td> <p><strong>Impôts payés </strong></p>
 	<input class="centerText bigText" data-wrapper-class="ui-custom" type = "text"  />
 	</td>
-	<td> <p><strong>Assurance payés </strong></p>
+	<td> <p><strong>Assurance payées </strong></p>
 	<input class="centerText bigText" data-wrapper-class="ui-custom" type = "text"  />
 	 </td>
 	</tr>
@@ -197,7 +197,7 @@
               <div class="popup-content-wrapper">
               <p> 
               		
-              		Vous serai bientôt contacter par un de nos experts. <br>
+              		Vous serez bientôt contacté par un de nos experts. <br>
               		 
               </p>
               <button id="confirmationSubmit" >Ok</button>
