--- a/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/next-best-offer-view.html
@@ -29,8 +29,8 @@
 							<td class="next-td-text">
 								<p class="content-header">
 								    <span>Merci.</span>
-								    Savez vous que Attijariwafa n'est pas seulement une banque.
-								    Demander plus d'informations sur nos autres services.
+								    Savez-vous que Attijariwafa n'est pas seulement une banque.
+								    Demandez plus d'informations sur nos autres services.
 								  </p>	
 							</td>
 						</tr>
@@ -39,7 +39,7 @@
 							<td class="home">
 							    <p class="top-title">Centre d'Assurance</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title-right">Protéger votre famille et vos propriétés</p>
+								<p class="bottom-title-right">Protégez votre famille et vos propriétés</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -47,7 +47,7 @@
 							<td class="home">
 							    <p class="top-title" style="color:#818181;">Centre d'Investissement</p>
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title-right">Plan de ratraite</p>
+								<p class="bottom-title-right">Plan de retraite</p>
 							</td>
 						</tr>
 					</tbody>
