--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -9,14 +9,14 @@
 		<div class="left">
 			<a href="../pages/home-view.html" data-transition="slide" data-direction="reverse">
 				<img alt="back" src="../images/header/back_arrow.png" />
-				<span class="back">Acceil</span>
+				<span class="back">Accueil</span>
 			</a>
 		</div>
 
 		
 		<!--<div class="center with-logo"></div>-->
 		<div class="center">
-			<p class="current-title">Comment vous voulez utiliser ce crédit ?</p>
+			<p class="current-title">Comment voulez-vous utiliser ce crédit ?</p>
 		</div>
 		
 	</div>
@@ -63,9 +63,9 @@
 
 	<div data-role="popup" id="mortgae-amount" data-transition="slidedown" data-dismissible="false" data-overlay-theme="b" >
         <form>
-              <h4 class="popup-title">Entrer le montant </h4>
+              <h4 class="popup-title">Saisir le montant </h4>
               <div class="popup-content-wrapper">
-              <label for="amount">Estimer le mantant du crédit</label>
+              <label for="amount">Estimer le montant du crédit</label>
               <input type="number" value="1000" step="1" min="100" max="50000000" id="amount" value="" placeholder="montant"  required/>
 
               
