adding load new language popup and making the amount entry dialog dismissable

--- a/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
+++ b/Kiosk-poc/apps/Kiosk/common/pages/select-mortgage-type-view.html
@@ -31,14 +31,14 @@
 							<td class="home" id="options">
 								
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Construction existante</p>
+								<p class="bottom-title">Propriété existante</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
 						<tr class="home-investment">
 							<td class="home">
 								<div class="bottom-title-effect"></div>
-								<p class="bottom-title">Nouvelle construction</p>
+								<p class="bottom-title">Nouvelle propriété</p>
 							</td>
 						</tr>
 						<tr class="spacer"></tr>
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 
-	<div data-role="popup" id="mortgae-amount" data-transition="slidedown" data-dismissible="false" data-overlay-theme="b" >
+	<div data-role="popup" id="mortgae-amount" data-transition="slidedown" data-dismissible="true" data-overlay-theme="b" >
         <form>
               <h4 class="popup-title">Saisir le montant </h4>
               <div class="popup-content-wrapper">
